started to design new blog

--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luna</title>
 </head>
 <body>
-    hello
+    <div class="container">
+        <div class="header">
+            <div class="button1">home</div>
+            <div class="button2">project</div>
+        </div>
+     <div class="main">
+        <div class="ax1">
+            <img src="./m1.jpeg">
+        </div>
+        <div class="ax2">
+            <img src="./m2.jpeg">
+        </div>
+        <div class="ax3">
+            <img src="./m3.jpeg">
+        </div>
+        <div class="ax4">
+            <img src="./m4.jpeg">
+        </div>
+        <div class="ax5">
+            <img src="./m5.jpeg">
+        </div>
+     </div>
+     </div>
+     </div>
 </body>
 </html>
