--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="./index.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <title>Luna</title>
 </head>
+
 <body>
     <div class="container">
         <div class="header">
-            <div class="button1">home</div>
-            <div class="button2">project</div>
+            <div class="btn selected">home</div>
+            <div class="btn">project</div>
         </div>
-     <div class="main">
-        <div class="ax1">
-            <img src="./m1.jpeg">
+        <div class="main">
+            <div class="items">
+                <div class="embeded-img circle-1"></div>
+                <div class="embeded-img circle-2"></div>
+                <div class="embeded-img circle-3"></div>
+                <div class="embeded-img circle-4"></div>
+                <div class="embeded-img circle-5"></div>
+            </div>
         </div>
-        <div class="ax2">
-            <img src="./m2.jpeg">
-        </div>
-        <div class="ax3">
-            <img src="./m3.jpeg">
-        </div>
-        <div class="ax4">
-            <img src="./m4.jpeg">
-        </div>
-        <div class="ax5">
-            <img src="./m5.jpeg">
-        </div>
-     </div>
-     </div>
-     </div>
+    </div>
+    </div>
 </body>
+
 </html>
