--- a/blog.html
+++ b/blog.html
@@ -14,18 +14,12 @@
 <body>
     <div class="container">
         <div class="header">
-            <a class="btn selected">home</a>
+            <a class="btn" href="./index.html">home</a>
             <a class="btn" href="./projects.html">projects</a>
-            <a class="btn" href="./blog.html">blog</a>
+            <a class="btn selected">blog</a>
         </div>
         <div class="main">
-            <div class="items">
-                <div class="embeded-img circle-1"></div>
-                <div class="embeded-img circle-2"></div>
-                <div class="embeded-img circle-3"></div>
-                <div class="embeded-img circle-4"></div>
-                <div class="embeded-img circle-5"></div>
-            </div>
+            BLOG
         </div>
     </div>
     </div>
