--- a/projects.html
+++ b/projects.html
@@ -14,8 +14,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <a class="btn selected">home</a>
-            <a class="btn" href="./projects.html">projects</a>
+            <a class="btn" href="./index.html">home</a>
+            <a class="btn selected">projects</a>
             <a class="btn" href="./blog.html">blog</a>
         </div>
         <div class="main">
