--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Luna</title>
+    <title>Luna | Home</title>
 </head>
 
 <body>
@@ -19,13 +17,7 @@
             <a class="btn" href="./blog.html">blog</a>
         </div>
         <div class="main">
-            <div class="items">
-                <div class="embeded-img circle-1"></div>
-                <div class="embeded-img circle-2"></div>
-                <div class="embeded-img circle-3"></div>
-                <div class="embeded-img circle-4"></div>
-                <div class="embeded-img circle-5"></div>
-            </div>
+            Home
         </div>
     </div>
     </div>
