blog.html has change

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,10 @@
             <a class="btn selected">blog</a>
         </div>
         <div class="main">
-            BLOG
+            hello welcome to my vlog,follow me so that
+            I can show show you the best becuse you deserve the best guys gtfhg kjijh ffcs
+            ffhbf
+            jydtgch vjugfdtgdd ,.opikh gcfdfdt hhhh
         </div>
     </div>
     </div>
